# app/Http/Controllers/Controller.php
@@ -9,8 +9,6 @@ namespace App\Http\Controllers;
  *     ),
  * @OA\SecurityScheme(
  *      securityScheme="bearerAuth",
- *      in="header",
- *      name="bearerAuth",
  *      type="http",
  *      scheme="bearer",
  *      bearerFormat="JWT",
